<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD8E4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_8"
        android:textSize="20sp"
        android:textColor="@color/brown"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonProc" />

    <Button
        android:id="@+id/buttonProc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_proc"
        android:textSize="18sp"
        android:textColor="@color/light"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttonPi"
        app:layout_constraintStart_toEndOf="@+id/buttonLn"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_1"
        android:textSize="20sp"
        android:textColor="@color/brown"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
    <Button
        android:id="@+id/buttonEq"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_eq"
        android:textColor="@color/light"
        android:textSize="20sp"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPoint"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />
    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_2"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_div"
        android:textColor="@color/light"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/buttonMul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPi"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />


    <Button
        android:id="@+id/button0"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/_0"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        android:backgroundTint="@color/light"/>

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:text="@string/_point"
        android:textColor="@color/light"
        android:textSize="24sp"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEq"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_4"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_add"
        android:textColor="@color/light"
        android:textSize="20sp"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/buttonEq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonSub" />

    <Button
        android:id="@+id/button7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_7"
        android:textSize="20sp"
        android:textColor="@color/brown"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLn" />

    <Button
        android:id="@+id/buttonLn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:textColor="@color/light"
        android:backgroundTint="@color/brown"
        android:text="@string/_ln"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonProc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />
    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_6"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonMul"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />
    <Button
        android:id="@+id/buttonSub"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_sub"
        android:textColor="@color/light"
        android:textSize="22sp"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMul" />
    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_5"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />
    <Button
        android:id="@+id/buttonMul"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_mul"
        android:textColor="@color/light"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/buttonSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv" />
    <Button
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_3"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toTopOf="@+id/buttonPoint"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="@color/light"
        android:text="@string/_9"
        android:textSize="20sp"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonPi" />
    <Button
        android:id="@+id/buttonPi"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/_pi"
        android:textColor="@color/light"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
        app:layout_constraintStart_toEndOf="@+id/buttonProc"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/editText1"
        android:hint="@string/editText1"
        android:importantForAccessibility="auto"
        android:inputType="number|numberDecimal"
        android:labelFor="@+id/editText1"
        app:layout_constraintBottom_toTopOf="@+id/buttonProc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="ContentDescription,LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>